@@ -1,3 +1,8 @@
+Sun Jun  6 23:35:12 2010  Masaya Tarui  <tarui@ruby-lnag.org>
+
+	* gc.c (heaps_slot, assign_heap_slot, gc_sweep): skip sweep if
+	  heap_slot's status is pre-free phase.  [ruby-dev:41543]
+
 Sun Jun  6 22:37:11 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* string.c (rb_str_buf_cat_escaped_char): get rid of buffer
